--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "src/sourceJAR/jdatepicker-1.3.4.jar"
+        "src/sourceJAR/jdatepicker-1.3.4.jar",
+        "mysql-connector-j-8.2.0/mysql-connector-j-8.2.0.jar"
     ]
 }
